# metaMask-auto

./: README.md  env.sample  pyproject.toml
src/: config.py  main.py
src/utils/: __init__.py  app_airdrop_work.py  base.py  cookies.py  extension.py  metamask_workers.py
